// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Counter 1`] = `
<button
  aria-disabled={false}
  aria-label="Primary Button"
  className="my-btn-class button button-primary pill-shape icon-left"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Primary Button
      <span
        className="badge header6 counter"
      >
        8
      </span>
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  aria-disabled={false}
  aria-label="Default Button"
  className="my-btn-class button button-default pill-shape icon-left"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Default Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Neutral 1`] = `
<button
  aria-disabled={false}
  aria-label="Neutral Button"
  className="my-btn-class button button-neutral pill-shape icon-left"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Neutral Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  aria-disabled={false}
  aria-label="Primary Button"
  className="my-btn-class button button-primary pill-shape icon-left"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Primary Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  aria-disabled={false}
  aria-label="Secondary Button"
  className="my-btn-class button button-secondary pill-shape icon-left"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Secondary Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Split 1`] = `
Array [
  <button
    aria-disabled={false}
    aria-label="Split Button"
    className="my-btn-class button button-primary pill-shape split-left"
    data-test-id="my-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myButton"
    style={Object {}}
    type="button"
  >
    <span
      className=""
    >
      Split Button
    </span>
  </button>,
  <button
    aria-checked={false}
    aria-disabled={false}
    aria-pressed={false}
    className="my-btn-class button button-primary pill-shape undefined split-button pill-shape split-right"
    defaultChecked={false}
    disabled={false}
    type="button"
  >
    <span
      aria-hidden={false}
      className="icon icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      aria-hidden="true"
      className="split-divider split-divider-primary"
    />
  </button>,
]
`;

exports[`Storyshots Button Split With Counter 1`] = `
Array [
  <button
    aria-disabled={false}
    aria-label="Split Button"
    className="my-btn-class button button-primary pill-shape split-left"
    data-test-id="my-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myButton"
    style={Object {}}
    type="button"
  >
    <span
      className=""
    >
      Split Button
      <span
        className="badge header6 counter"
      >
        8
      </span>
    </span>
  </button>,
  <button
    aria-checked={false}
    aria-disabled={false}
    aria-pressed={false}
    className="my-btn-class button button-primary pill-shape undefined split-button pill-shape split-right"
    defaultChecked={false}
    disabled={false}
    type="button"
  >
    <span
      aria-hidden={false}
      className="icon icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      aria-hidden="true"
      className="split-divider split-divider-primary"
    />
  </button>,
]
`;

exports[`Storyshots Button System UI 1`] = `
<button
  aria-disabled={false}
  aria-label="System UI Button"
  className="my-btn-class button button-system-ui transparent pill-shape icon-left"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      System UI Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Toggle 1`] = `
<button
  aria-checked={false}
  aria-disabled={false}
  aria-label="Toggle Button"
  aria-pressed={false}
  className="my-btn-class button button-primary pill-shape icon-right"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Toggle Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Toggle With Counter 1`] = `
<button
  aria-checked={false}
  aria-disabled={false}
  aria-label="Toggle Button"
  aria-pressed={false}
  className="my-btn-class button button-primary pill-shape icon-right"
  data-test-id="my-btn-test-id"
  defaultChecked={false}
  disabled={false}
  id="myButton"
  style={Object {}}
  type="button"
>
  <span>
    <span
      aria-hidden={true}
      className="icon my-btn-icon icon-wrapper"
      data-test-id="myButtonIconTestId"
      id="myButtonIcon"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
    <span
      className=""
    >
      Toggle Button
      <span
        className="badge header6 counter"
      >
        8
      </span>
    </span>
  </span>
</button>
`;
